--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "next": "12.1.6",
+    "prismjs": "1.28.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-simple-code-editor": "^0.11.2",
+    "styled-components": "5.3.5"
   },
   "devDependencies": {
     "@types/node": "17.0.42",
+    "@types/prismjs": "1.26.0",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "@types/styled-components": "5.1.25",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.7.3"
